Send foreground/backgroudn notifications to V8 independent from RunIdleHandlerWhenWidgetsHidden.

BUG=591031

Review URL: https://codereview.chromium.org/1755623002

Cr-Commit-Position: refs/heads/master@{#378439}

Former-commit-id: 432cd6e477aa68037aa0f836b96fcc194ec2bd31